# soul-protocol

./: Cargo.toml  README.md  gen_sig.py  init_contracts.py
contracts/binance/: Cargo.toml
contracts/binance/src/: lib.rs  logic.rs  storage.rs  test.rs
contracts/binance/test_snapshots/test/: test_mint_invalid_nonce.1.json  test_mint_returns_token_id_one.1.json  test_mint_with_passkey_and_expiry_and_validity.1.json
contracts/dev-faucet/: Cargo.toml
contracts/dev-faucet/src/: lib.rs
contracts/github/: Cargo.toml
contracts/github/src/: lib.rs  logic.rs  storage.rs  test.rs
contracts/github/test_snapshots/test/: test_mint_requires_soul.1.json  test_mint_returns_token_id_one.1.json  test_mint_with_passkey_and_expiry_and_validity.1.json  test_trait_implementation.1.json  test_upgrade_requires_admin.1.json
contracts/soul/: Cargo.toml
contracts/soul/src/: lib.rs  logic.rs  storage.rs  test.rs
contracts/soul/test_snapshots/test/: test_double_owner_mint.1.json  test_initialize_already_initialized.1.json  test_passkey_already_in_use.1.json  test_recover_soul_invalid_signature.1.json  test_recover_soul_success.1.json  test_recover_soul_unauthorized_relayer.1.json  test_renew_soul_ttl.1.json  test_renew_soul_ttl_missing.1.json  test_soul_already_exists.1.json  test_soul_mint.1.json  test_unauthorized_mint.1.json
