[package]
name = "zolvency-soul"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Felipe Nunes"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "25.3.1" }

[dev-dependencies]
soroban-sdk = { version = "25.3.1", features = ["testutils"] }
nexus = { path = "../nexus", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
